--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,9 +35,8 @@ jobs:
       - run:
           name: auto build
           command: |
-            diffInfo=`git diff --stat`
-            if [ "$diffInfo" != "" ]; then
-              echo "$diffInfo";
+            commit=`git show --format="%s" --no-patch`
+            if [ "$commit" != "deploy: 🤖 auto build" ]; then
               npm run build
             fi
       - run:
@@ -45,7 +44,6 @@ jobs:
           command: |
             diffInfo=`git diff --stat`
             if [ "$diffInfo" != "" ]; then
-              echo "$diffInfo";
               if [ -d /home/ ]; then
                 mkdir ~/.ssh/ && echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
                 git config --global user.email "$EMAIL"
