--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "antd": "^3.26.20",
     "cryptorjs": "^3.0.0",
     "github-markdown-css": "^3.0.1",
-    "highlight.js": "^9.18.5",
-    "react-say": "^2.0.1"
+    "highlight.js": "^9.18.5"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.167",
