--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "highlight.js": "^9.18.5"
   },
   "devDependencies": {
+    "@antv/g2": "^4.1.16",
     "@types/lodash": "^4.14.167",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
